--- a/src/app/components/feature-form/feature-form.component.css
+++ b/src/app/components/feature-form/feature-form.component.css
@@ -4,12 +4,14 @@
   padding: 30px;
   background: #f4f4f4;
   border-radius: 10px;
+  margin-top: 150px;
+  overflow: hidden;
 }
 
-/* Create a 2-column grid layout */
+/* Create a 3-column grid layout */
 .form-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr; /* Two equal columns */
+  grid-template-columns: repeat(3, 1fr); /* Three equal columns */
   gap: 30px;
 }
 
@@ -26,6 +28,6 @@ mat-form-field {
 button {
   width: 100%;
   margin-top: 20px;
-  padding: 15px; 
+  padding: 15px;
   font-size: 16px;
 }
