--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,12 +7,12 @@
     [class.active]="selectedComponent === 'form'">
     Form Input
   </button>
-  <!-- <button 
+  <button 
     mat-button 
     (click)="switchComponent('upload')" 
     [class.active]="selectedComponent === 'upload'">
     Upload Excel
-  </button> -->
+  </button>
 
   <img [src]="rightLogo" alt="Right Logo" class="right-logo">
 
