--- a/src/app/components/upload-excel/upload-excel.component.css
+++ b/src/app/components/upload-excel/upload-excel.component.css
@@ -1,10 +1,11 @@
 .container {
-    max-width: 800px;
+    max-width: fit-content;
     margin: auto;
     padding: 20px;
     background: #f4f4f4;
     border-radius: 10px;
     text-align: center;
+    margin-top: 20px;
   }
   
   input {
